# canopen_test

./: .gitignore  ItalseaDualDrive.eds  TASK.md  canopen_241.py  canopen_with_fallback_load_configuration.py  italsea_canlog.txt  italsea_canlog_2.txt  italsea_driver.py  italsea_sim.py  italsea_task.py  test.py
a5_control/: IRIS_A5.eds  package.xml  setup.cfg  setup.py
a5_control/a5_control/: a5_control.py
a5_control/a5control/: a5_control.py
a5_control/eds/: a5_control.eds  a5_control.xdd
a5_control/scripts/: can_init.sh
a5_simulator/: README.md  package.xml  setup.cfg  setup.py
a5_simulator/a5_simulator/: a5_simulator_node.py
a5_simulator/launch/: a5_simulator.launch.py
can_interface/: package.xml  setup.py
can_interface/can_interface/: canopen_interface.py
can_interface/scripts/: can_init.sh
install/: local_setup.sh  setup.sh
install/a5_control/lib/a5_control/: a5_control  a5_control_exe
install/a5_control/share/a5_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/a5_control/share/a5_control/scripts/: can_init.sh
install/a5_simulator/lib/a5_simulator/: a5_simulator_node
install/a5_simulator/share/a5_simulator/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/can_interface/lib/can_interface/: canopen_face
install/can_interface/share/can_interface/: package.dsv  package.ps1  package.sh  package.xml
install/iris_interfaces/share/iris_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/iris_interfaces/share/iris_interfaces/action/: ComputePathCoverage.action  ComputePathCoverage.idl  NavigatePathCoverage.action  NavigatePathCoverage.idl  PathCoverageController.action  PathCoverageController.idl
install/iris_interfaces/share/iris_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_iris_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_iris_interfaces__rosidl_generator_pyExport.cmake  export_iris_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_iris_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_iris_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  iris_interfacesConfig-version.cmake  iris_interfacesConfig.cmake  rosidl_cmake-extras.cmake  (+7 more)
install/motor_control/lib/motor_control/: motor_control_node
install/motor_control/share/motor_control/: package.ps1  package.sh  package.xml
iris_interfaces/: CMakeLists.txt  log.MD
iris_interfaces/action/: ComputePathCoverage.action  NavigatePathCoverage.action  PathCoverageController.action
iris_interfaces/motor_control/: package.xml  setup.py
iris_interfaces/motor_control/eds/: IRIS_A2.eds  ItalseaDualBLDCMotorController.eds
iris_interfaces/motor_control/scripts/: can_init.sh
iris_interfaces/msg/: A2FaultStatus.msg  BrushStatus.msg  MotorControllerStatus.msg  MotorStatus.msg  WaterTankLevels.msg
iris_interfaces/srv/: BluetoothState.srv  ConnectWifi.srv  GetWifiStatus.srv  ProcessManager.srv  UpdateMotorControllerParameters.srv  UpdateMotorControllerReferenceSource.srv
log/: latest_build
motor_control/: package.xml  setup.py
motor_control/eds/: ItalseaDualBLDCMotorController.eds  ItalseaDualBLDCMotorController.xdd
motor_control/motor_control/: iris_motor_control.py  italsea_dual_drive.py
motor_control/scripts/: can_init.sh
(+765 files in other folders)
