<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>a5_simulator</name>
  <version>0.1.0</version>
  <description>
    Software simulator for the IRIS A5 controller.
    Publishes wheel encoders, ultrasonic ranges, water tank levels and A5 status.
    Subscribes to LED control commands.
    Provides an interactive CLI to inject faults, adjust sensor readings, and set motion.
  </description>

  <maintainer email="maddy@iris.local">maddy</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>iris_interfaces</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
